changes for javadoc